# ipd

./: .buildinfo  .git-pre-commit  .gitignore  .pyright_exclude  .pyright_hash_last_commit  .readthedocs.yaml  .ruff.toml  .sourcery.yaml  .yapf_hash  README.md  genindex.html  git_pre_commit.sh  index.html  local.toml  modules.html  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  search.html  searchindex.js  sg_execution_times.html
.github/: run_tests_digs.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  documentation.yaml  feature_request.yaml
.github/workflows/: build_docs.yaml  run_test_matrix.yaml  run_tests_digs.yml
_apidoc/: ipd.atom.assembly.html  ipd.atom.atom_utils.html  ipd.atom.body.html  ipd.atom.components.html  ipd.atom.crops.html  ipd.atom.html  ipd.bunch.html  ipd.crud.backend.html  ipd.crud.crudcli.html  ipd.crud.frontend.html  ipd.crud.html  ipd.crud.server.html  ipd.dev.cli.clibase.html  ipd.dev.cli.html  ipd.dev.code.filter_python_output.html  ipd.dev.code.format_code.html  ipd.dev.code.gentest.html  ipd.dev.code.html  ipd.dev.code.inspect.html  ipd.dev.code.typecheck.html  ipd.dev.contexts.html  ipd.dev.debug.html  ipd.dev.decorators.html  ipd.dev.element_wise.html  ipd.dev.error.html  ipd.dev.files.html  ipd.dev.format.html  ipd.dev.functional.html  ipd.dev.html  ipd.dev.instrumentation.containers.html  ipd.dev.instrumentation.html  ipd.dev.instrumentation.timer.html  ipd.dev.iterables.html  ipd.dev.meta.html  ipd.dev.metadata.html  ipd.dev.misc.html  ipd.dev.objinfo.html  ipd.dev.qt.context_menu.html  ipd.dev.qt.html  ipd.dev.safe_eval.html  (+115 more)
_autosummary/: ipd.atom.assembly.html  ipd.atom.atom_utils.html  ipd.atom.body.html  ipd.atom.components.html  ipd.atom.crops.html  ipd.atom.html  ipd.bunch.html  ipd.crud.backend.html  ipd.crud.crudcli.html  ipd.crud.frontend.html  ipd.crud.html  ipd.crud.server.html  ipd.cuda.html  ipd.cython.html  ipd.dev.cli.clibase.html  ipd.dev.cli.html  ipd.dev.code.filter_python_output.html  ipd.dev.code.format_code.html  ipd.dev.code.gentest.html  ipd.dev.code.html  ipd.dev.code.inspect.html  ipd.dev.code.typecheck.html  ipd.dev.contexts.html  ipd.dev.debug.html  ipd.dev.decorators.html  ipd.dev.element_wise.html  ipd.dev.error.html  ipd.dev.files.html  ipd.dev.format.html  ipd.dev.functional.html  ipd.dev.html  ipd.dev.instrumentation.containers.html  ipd.dev.instrumentation.html  ipd.dev.instrumentation.timer.html  ipd.dev.iterables.html  ipd.dev.meta.html  ipd.dev.metadata.html  ipd.dev.misc.html  ipd.dev.objinfo.html  ipd.dev.qt.context_menu.html  (+158 more)
_modules/: index.html  ipd.html
_modules/ipd/: bunch.html  motif.html  project_config.html  sym.html
_sources/: modules.rst.txt
_sources/_apidoc/: ipd.atom.assembly.rst.txt  ipd.atom.atom_utils.rst.txt  ipd.atom.body.rst.txt  ipd.atom.components.rst.txt  ipd.atom.crops.rst.txt  ipd.atom.rst.txt  ipd.bunch.rst.txt  ipd.crud.backend.rst.txt  ipd.crud.crudcli.rst.txt  ipd.crud.frontend.rst.txt  ipd.crud.rst.txt  ipd.crud.server.rst.txt  ipd.dev.cli.clibase.rst.txt  ipd.dev.cli.rst.txt  ipd.dev.code.filter_python_output.rst.txt  ipd.dev.code.format_code.rst.txt  ipd.dev.code.gentest.rst.txt  ipd.dev.code.inspect.rst.txt  ipd.dev.code.rst.txt  ipd.dev.code.typecheck.rst.txt  ipd.dev.contexts.rst.txt  ipd.dev.debug.rst.txt  ipd.dev.decorators.rst.txt  ipd.dev.element_wise.rst.txt  ipd.dev.error.rst.txt  ipd.dev.files.rst.txt  ipd.dev.format.rst.txt  ipd.dev.functional.rst.txt  ipd.dev.instrumentation.containers.rst.txt  ipd.dev.instrumentation.rst.txt  ipd.dev.instrumentation.timer.rst.txt  ipd.dev.iterables.rst.txt  ipd.dev.meta.rst.txt  ipd.dev.metadata.rst.txt  ipd.dev.misc.rst.txt  ipd.dev.objinfo.rst.txt  ipd.dev.qt.context_menu.rst.txt  ipd.dev.qt.rst.txt  ipd.dev.rst.txt  ipd.dev.safe_eval.rst.txt  (+113 more)
_sources/auto_examples/: index.rst.txt
_sources/dev_guide/: coding.rst.txt  index.rst.txt  testing.rst.txt  tooling.rst.txt
_sources/tutorials/: contact_matrix.rst.txt  function_decorators.rst.txt  index.rst.txt  processing_assemblies.rst.txt  symmetry_detection.rst.txt  using_homog.rst.txt  working_with_bodies.rst.txt
auto_examples/: index.html  sg_execution_times.html
dev_guide/: coding.html  dependencies.html  index.html  testing.html  tooling.html
docs/: Makefile  conf.py  index.rst  requirements.txt
docs/dev_guide/: dependencies.rst
docs/examples/: index.rst
docs/tutorials/: class_decorators.rst  contact_matrix.rst  function_decorators.rst  index.rst  processing_assemblies.rst  symmetry_detection.rst  using_homog.rst  working_with_atoms.rst  working_with_bodies.rst
examples/: index.html
ide/: runtest.py
ide/whs/: ipd.sublime-project  ipd.sublime-workspace
ipd/: __init__.py  __main__.py  bunch.py  lazy_import.py  project_config.py  typehints.py
ipd/_prelude/: __init__.py  chrono.py  import_util.py  lazy_import.py  structs.py  typehints.py  wraps.py
ipd/atom/: __init__.py  assembly.py  atom_frames.py  atom_geom.py  atom_utils.py  body.py  components.py  crops.py
ipd/config/: sym_test.yaml
ipd/crud/: __init__.py  backend.py  crudcli.py  frontend.py  server.py
ipd/cuda/: __init__.py  cudabuild.py  cudafunc.py  ipd_util.hpp  pytorch_boxing_patch.h
ipd/cython/: __init__.py  dynamic_float_array.pyx
ipd/data/: helen_sym_pdb_list.txt  spacegroup_data.pickle.xz  willutil_spacegroup_data.pickle.xz
ipd/dev/: __init__.py  apimeta.py  bunch.py  contexts.py  debug.py  deco.py  decorators.py  element_wise.py  error.py  filefetch.py  files.py  format.py  funcs.py  functional.py  git.py  gitignore.py  instrumented.py  iterables.py  lazy_import.py  meta.py  metadata.py  misc.py  objinfo.py  pipimport.py  project_config.py  safe_eval.py  serialization.py  shell.py  state.py  storage.py  timer.py  (+4 more)
notes/: prompts.txt
old/: __init__.py  asufit.py  asugrid.py  asuslide.py  pymol_symgen.py  rosetta_symdef.py  symfit.py
tutorials/: class_decorators.html  contact_matrix.html  function_decorators.html  index.html  processing_assemblies.html  symmetry_detection.html  using_homog.html  working_with_atoms.html  working_with_bodies.html
(+564 files in other folders)
