[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.metadata]
allow-direct-references = true
# [build-system]
# requires = ["setuptools >= 61.0"]
# build-backend = "setuptools.build_meta"
# [build-system]
# requires = ["pdm-backend"]
# build-backend = "pdm.backend"

[project]
name = 'ipd'
version = '0.1'
requires-python = '>3.9,<4' # for woodys old pipeline stuff
dependencies = [
    'attrs',
    'assertpy',
    'colorlog',
    'compact-json',
    # 'eliot-tree',
    'gitpython',
    'hydra-core',
    'hypothesis[numpy]',
    'icecream',
    'jinja2',
    'lark',
    # 'more_itertools',
    # 'numba',
    'numpy',
    # 'xarray',
    'opt_einsum',
    # 'pre-commit',
    # 'pandas',
    'pydantic',
    'rich',
    'requests',
    'RestrictedPython',
    'ruff',
    # 'seaborn',
    'tqdm',
    'typer',
    'validate-pyproject[all]',
    'yapf',
    # "torch>=2.6.0",
    "willutil_cpp @ git+https://github.com/willsheffler/willutil_cpp",
]
[project.optional-dependencies]
crud = [
    'fastapi[standard]',
    # 'psycopg2',
    'sqlmodel',
    'uvicorn[standard]',
    'pdot',
]
ci = ['submitit']
ml = ['torch']
biotite = ['biotite']
dev = [
    'debugpy',
    'nox',
    "pytest",
    'pytest-xdist',
    'pytest-sugar',
    'pytest-cov',
    'pytest-benchmark',
    'pytest-dotenv',
    'pyright[nodejs]',
]
all = [
    'fastapi[standard]',
    'psycopg2',
    'sqlmodel',
    'uvicorn[standard]',
    'pdot',
    'debugpy',
    'scipy',
    'pandas',
    'torch',
    'submitit',
]
[project.scripts]
ipd = 'ipd.__main__:main'

[tool.pytest.ini_options]
minversion = '6.0'
addopts = '-m "not ci" --disable-warnings --doctest-continue-on-failure'

testpaths = [
    'ipd/tests',
    'ipd/atom',
    'ipd/homog',
    'ipd/sym',
    'ipd/bunch.py',
    'ipd/crud',
    'ipd/dev',
    'ipd/observer',
    'ipd/pdb',
    'ipd/protocol',
    'ipd/tool',
]
markers = [
    'slow: marks tests as slow to run',
    'fast: tests that run in a second or two',
    'ci: tests that should only run in ci',
]

[tool.yapf]
based_on_style = 'pep8'
indent_width = 4
column_limit = 111
blank_line_before_nested_class_or_def = true
blank_lines_around_top_level_definition = 1
arithmetic_precedence_indication = true

[tool.pyright]
include = ['ipd']
exclude = [
    'ipd/crud/*',
    'ipd/fit/*',
    'ipd/homog/*',
    'ipd/pdb/*',
    'ipd/voxel/*',
    'ipd/samp/*',
    'ipd/sym/old/*',
    'ipd/sym/xtal/*',
    'ipd/tests/*',
    'ipd/viz/*',
    '*_viz.py',
    '**/*.log',
    '**/__pycache__',
]
threads = 4
defineConstant = { DEBUG = true }
typeCheckingMode = 'standard'
reportMissingImports = true
reportMissingTypeStubs = false
pythonPlatform = 'Linux'
requires-python = '>=3.11'
pythonVersion = '3.12'

[tool.ruff]
lint.ignore = [
   'E731', #  [ ] Do not assign a `lambda` expression, use a `def`
   'E402', #  [ ] Module level import not at top of file
   'E741', #  [ ] Ambiguous variable name: `I`
   'E701', #  [ ] Multiple statements on one line (colon)
   'F403', #  [ ] `from Attention_module import *` used; unable to detect undefined names
   'F405',
   'F821',
   'F841',

]
lint.dummy-variable-rgx = '^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?)|ic)$'
line-length = 123
target-version = 'py39'
format.quote-style = 'single'
format.indent-style = 'space'
format.docstring-code-format = true
