[build-system]
requires = ["hatchling", "hatch-cython"]
build-backend = "hatchling.build"

# [tool.hatch.build.targets.wheel.hooks.cython]
# sources = ["src/my_package/**/*.pyx"]
# extra_compile_args = ["-O3"]

#[tool.hatch.build.targets.wheel]
#only-include = ["ipd"]
#
#[tool.hatch.build.targets.wheel.hooks.cython]
#dependenciees = ["hatch-cython"]
#
[tool.hatch.metadata]
allow-direct-references = true
#
#[build.targets.wheel.hooks.cython.options.files]
#targets = ["ipd/cython/dynamic_float_array.pyx"]
#
# [tool.hatch.build.hooks.custom]
# path = "build.py"

[project]
name = 'ipd'
version = '0.2'
requires-python = '>3.9,<4' # for woodys old pipeline stuff
dependencies = [
    'attrs',
    'assertpy',
    'colorlog',
    'compact-json',
    'hydra-core',
    'hypothesis',
    'httpx',
    'icecream',
    'lark',
    # 'numba',
    'numpy',
    'opt_einsum',
    # 'pandas',
    'pydantic',
    'rich',
    'RestrictedPython',
    # 'seaborn',
    'typer',
    "toolz>=1.0.0",
    'pytest',
    'pytest-xdist',
]
[project.optional-dependencies]
crud = [
    'fastapi[standard]',
    # 'psycopg2',
    'sqlmodel',
    'uvicorn[standard]',
    'pdot',
]
tools = [
    'submitit',
    'gitpython',
    'jinja2',
    ]
ml = [
    'torch',
    'pandas',
    'biotite',
    "willutil_cpp @ git+https://github.com/willsheffler/willutil_cpp"
]
# docs = [
#     'sphinx',
#     'sphinx-pydata-theme',
#     'matplotlib',
#     'pybtex',
#     'sphinx_gallery',
#     'apidoc',
#     'bibliography',
#     'preamble',
#     'scraper',
#     'switcher',
# ]
dev = [
    'debugpy',
    'hypothesis[numpy]',
    "pytest",
    'gitpython',
    'jinja2',
    'nox',
    'pytest-xdist',
    'pytest-sugar',
    'pytest-cov',
    'pytest-benchmark',
    'pytest-dotenv',
    'basedpyright',
    'ruff',
    'validate-pyproject[all]',
    'yapf',
]
all = [
    "biotite",
    'debugpy',
    'fastapi[standard]',
    'gitpython',
    'jinja2',
    'pandas',
    'pdot',
    'psycopg2',
    'scipy',
    'sqlmodel',
    'submitit',
    'torch',
    'uvicorn[standard]',
    "willutil_cpp @ git+https://github.com/willsheffler/willutil_cpp",
]
[project.scripts]
ipd = 'ipd.__main__:main'

[tool.pytest.ini_options]
minversion = '6.0'
addopts = '-m "not ci" --disable-warnings --doctest-continue-on-failure'

testpaths = [
    'ipd/tests',
    'ipd/atom',
    'ipd/homog',
    'ipd/sym',
    'ipd/bunch.py',
    'ipd/crud',
    'ipd/dev',
    'ipd/observer',
    'ipd/pdb',
    'ipd/protocol',
    'ipd/tool',
]
markers = [
    'slow: marks tests as slow to run',
    'fast: tests that run in a second or two',
    'ci: tests that should only run in ci',
]

[tool.yapf]
based_on_style = 'pep8'
indent_width = 4
column_limit = 111
blank_line_before_nested_class_or_def = true
blank_lines_around_top_level_definition = 1
arithmetic_precedence_indication = true

# [tool.pyright]
# pythonVersion = "3.12"
# pythonPlatform = "Linux"
# venvPath = "/home/sheffler/sw/MambaForge/envs"
# venv = "rfdsym312"
# include = ['ipd']
# exclude = [
#     # 'ipd/crud/*',
#     # 'ipd/fit/*',
#     # 'ipd/homog/*',
#     # 'ipd/pdb/*',
#     # 'ipd/voxel/*',
#     # 'ipd/samp/*',
#     # 'ipd/sym/old/*',
#     # 'ipd/sym/xtal/*',
#     # 'ipd/tests/*',
#     # 'ipd/viz/*',
#     # '*_viz.py',
#     '**/*.log',
#     '**/__pycache__',
# ]
# threads = 12
# defineConstant = { DEBUG = true }
# # typeCheckingMode = 'basic'
# typeCheckingMode = 'standard'
# reportMissingImports = false
# reportMissingTypeStubs = false
#
# executionEnvironments = [
#   { root = 'ipd' }
# ]

[tool.ruff]
lint.ignore = [
   'E731', #  [ ] Do not assign a `lambda` expression, use a `def`
   'E402', #  [ ] Module level import not at top of file
   'E741', #  [ ] Ambiguous variable name: `I`
   'E701', #  [ ] Multiple statements on one line (colon)
   'F403', #  [ ] `from Attention_module import *` used; unable to detect undefined names
   'F405',
   'F821',
   'F841',

]
lint.dummy-variable-rgx = '^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?)|ic)$'
line-length = 113
target-version = 'py39'
format.quote-style = 'single'
format.indent-style = 'space'
format.docstring-code-format = true
